Mise en place de la mutation